Loading with images and detail activity commit

--- a/PopularMoviesI/app/build.gradle
+++ b/PopularMoviesI/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each{
+        it.buildConfigField "String","THE_MOVIE_DB_API_KEY","\"c0631d5a0d4a9400627f4628a065c66b\""
+    }
 }
 
 dependencies {
