--- a/PopularMoviesI/app/build.gradle
+++ b/PopularMoviesI/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
 
     buildTypes.each{
-        it.buildConfigField "String","THE_MOVIE_DB_API_KEY","\"ReplaceWithYourAPIKEY\""
+        it.buildConfigField "String","THE_MOVIE_DB_API_KEY","\"zzzzxxxxxxxxxxxxxxxxxxxxxxxxxxxx\""
     }
 }
 
